shopstack/ops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopstack
  labels:
    name: shopstack
